# mcp-sonarcloud

./: .env.example  .gitignore  DEVELOPMENT.md  LICENSE  README.md  SONARCLOUD_API_SUPPORT.md  claude_desktop_config.example.json  pyproject.toml
src/mcp_sonarcloud/: __init__.py  server.py
tests/: __init__.py  test_server.py
