[project]
name = "mcp-sonarcloud"
version = "0.1.0"
description = "MCP server for SonarCloud with hotspot support"
authors = [{name = "Lukas Lehner", email = "lehner.lukas@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["mcp", "sonarcloud", "code-quality", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/lukleh/mcp-sonarcloud"
Repository = "https://github.com/lukleh/mcp-sonarcloud"
Issues = "https://github.com/lukleh/mcp-sonarcloud/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-sonarcloud = "mcp_sonarcloud.server:main"
